# cal-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md
.github/workflows/: build.yml  ci.yml
src/: main.rs
