[package]
name = "cal"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robert Jackson <me@rwjblue.com>"]
description = "`cal` is a simple command-line calendar application written in Rust."
repository = "https://github.com/rwjblue/cal-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
home = "0.5.9"
itertools = "0.12.1"
plist = "1.6.1"

[dev-dependencies]
insta = { version = "1.38.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
